fix clone recipe

--- a/1. Objects & Arrays/1. Clone.md
+++ b/1. Objects & Arrays/1. Clone.md
@@ -1,4 +1,4 @@
-# 👨‍👩‍👧‍👦 3 ways to clone objects in Javascript 👨‍👩‍👧‍👦
+# 👨‍👩‍👧‍👦 3 ways to clone objects in Javascript
 
 ```
 const noahsArk = { cat: '🐱', dino: '🦕', lion: '🦁', dog: '🐶' }
