feat: add documentation for array of promises
The documentation that was added is about executing an array of promises secuentially

--- a/5. Asynchronous/03. Serial Promises.md
+++ b/5. Asynchronous/03. Serial Promises.md
@@ -23,3 +23,20 @@ async function parallelApiCalls() {
     return [firstResult, secondResult];
 }
 ```
+
+## 3️⃣ Asynchronous loop serial calls
+
+Se ejecuta de forma secuencial un array de promesas.
+
+```
+async function serialPromiseArrayCalls(promiseArray) {
+  const results = await promiseArray.reduce(async (acc, promise) => {
+    const acumulator = await acc;
+    const res = await promise();
+
+    return [...acumulator, res];
+  }, []);
+
+  return result;
+}
+```
