--- a/5. Asynchronous/03. Serial Promises.md
+++ b/5. Asynchronous/03. Serial Promises.md
@@ -2,7 +2,7 @@
 
 ## 1️⃣ Asynchronous serial calls
 
-La segunda no se ejecuta hasta que no finaliza la primera.
+The second does not run until the first has finished.
 
 ```
 async function serialApiCalls() {
@@ -18,7 +18,7 @@ The two calls are executed at the same time.
 
 ```
 async function parallelApiCalls() {
-    // No espera a que se complete el resto si una falla
+    // Don't wait for the rest to complete if a failure
     const [firstResult, secondResult] = await Promise.all([fetchFirst(), fetchSecond()]);
     return [firstResult, secondResult];
 }
