chapter: 7.03 Records and Tuples added references

--- a/7. ECMAScript/03. Records and Tuples.md
+++ b/7. ECMAScript/03. Records and Tuples.md
@@ -82,3 +82,9 @@ Object.keys(personRecord); // ['id', 'fullname', 'age']
 const numbers = #[1, 2, 3];
 numbers.map(number => number * 2);  // Returns the tuple #[2, 4, 6]
 ```
+
+## References
+
+- https://2ality.com/2020/05/records-tuples-first-look.html
+
+- https://medium.com/javascript-in-plain-english/records-and-tuples-will-how-react-developers-write-code-4abdd31f9b01
