--- a/7. ECMAScript/01. ES2020 News.md
+++ b/7. ECMAScript/01. ES2020 News.md
@@ -4,9 +4,7 @@
 
 ```
 const person = {
-  name: 'Gerardo',
-  age: 19,
-  company: 'Latte and Code',
+  name: 'Gerardo'
 };
 
 console.log(person?.contactInfo?.telephone); // undefined 
@@ -47,3 +45,64 @@ Async-await style:
 let module = await import('/modules/my-module.js');
 ```
 
+## 5️⃣ String.protype.matchAll
+
+Returns an iterator which returns all matched groups in a regex.
+
+```
+const regexp = /[a-c]/g
+const foo = 'abc';
+const iterator = foo.matchAll(regexp);
+for (let value of iterator) {
+  console.log(value); 
+}
+
+// ["a", index: 0, input: "abc", groups: undefined]
+// ["b", index: 1, input: "abc", groups: undefined]
+// ["c", index: 2, input: "abc", groups: undefined]
+```
+
+## 6️⃣ Promise.allSettled
+
+Accepts an array of Promises and resolves when all of them are settled (resolved or rejected).
+
+```
+const promises = [
+  fetch('https://reqres.in/api/user/2'),
+  fetch('https://invalid.com')
+];
+Promise.allSettled(promises)
+  .then(results => console.log(results));
+// [{status: "fulfilled", value: Response}, {status: "rejected", reason: TypeError: Failed to fetch}]
+```
+
+## 7️⃣ globalThis
+
+Refers to the global object: `window` for browsers, `global` for Node, and `self` for web workers.
+
+For example, in a browser:
+
+```
+console.log(globalThis === window); // true
+```
+
+## 8️⃣ Module Namespace Exports
+
+```
+export * as services from './services.js'
+```
+
+Equivalent to:
+
+```
+import * as services from './services.js'
+export { services }
+```
+
+## 9️⃣ Order of iteration in for...in
+
+ES2020 defines a standard on the order in which properties within a loop `for (prop in obj)` are iterated, básicamente:
+
+- Integer numeric keys, in ascending order (0, 1, 2)
+- String keys, in the order they were inserted onto the object
+- Symbol keys
