--- a/7. ECMAScript/01. ES2020 News.md
+++ b/7. ECMAScript/01. ES2020 News.md
@@ -107,6 +107,6 @@ ES2020 defines a standard on the order in which properties within a loop `for (p
 - String keys, in the order they were inserted onto the object
 - Symbol keys
 
-## ☕️ Si te ha gustado puedes invitarme a un cafelito en:
+## ☕️ If you liked it, you can invite me for a coffee at:
 
 https://www.buymeacoffee.com/latteandcode
