--- a/1. Objects & Arrays/13. Prototypes (II).md
+++ b/1. Objects & Arrays/13. Prototypes (II).md
@@ -49,3 +49,7 @@ console.log(squealer.isAllowedToCreateNewLaws); // false
 ## Full Video
 
 [![Prototypes](https://i9.ytimg.com/vi/YOBlfX1PAPg/mqdefault.jpg?time=1595837460300&sqp=CNiX-vgF&rs=AOn4CLBsx-6ujOiXwKbp-4kcPrA2cqLK4Q)](https://youtu.be/YOBlfX1PAPg)
+
+## ☕️ If you liked it, you can invite me for a coffee at:
+
+https://www.buymeacoffee.com/latteandcode
