--- a/2. Functions/07. Required Params.md
+++ b/2. Functions/07. Required Params.md
@@ -17,3 +17,7 @@ try {
     console.log(error.message); // 'requiredParam is required
 }
 ``` 
+
+## ☕️ If you liked it, you can invite me for a coffee at:
+
+https://www.buymeacoffee.com/latteandcode
