--- a/6. Good to know/07. Tagged Templates.md
+++ b/6. Good to know/07. Tagged Templates.md
@@ -39,3 +39,7 @@ operate`2 ${dividedBy} 10`; // 0.2
 - [Javascript: How Backticks Work](https://medium.com/better-programming/javascript-how-backticks-work-de269e0fb8ba)
 
 - [Template Literals](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals)
+
+## ☕️ If you liked it, you can invite me for a coffee at:
+
+https://www.buymeacoffee.com/latteandcode
