--- a/6. Good to know/08. Short Circuits.md
+++ b/6. Good to know/08. Short Circuits.md
@@ -52,3 +52,7 @@ const person = {
 };
 console.log(person.age || 33); // 33
 ```
+
+## ☕️ If you liked it, you can invite me for a coffee at:
+
+https://www.buymeacoffee.com/latteandcode
