--- a/6. Good to know/09. Operators.md
+++ b/6. Good to know/09. Operators.md
@@ -50,3 +50,7 @@ c %= 10;
 console.log(c); // 1
 ```
 
+## ☕️ If you liked it, you can invite me for a coffee at:
+
+https://www.buymeacoffee.com/latteandcode
+
