--- a/1. Objects & Arrays/14. Sorting arrays.md
+++ b/1. Objects & Arrays/14. Sorting arrays.md
@@ -36,3 +36,7 @@ const products = [
 ];
 products.sort((p1, p2) => (p1.price - p2.price));
 ```
+
+## ☕️ If you liked it, you can invite me for a coffee at:
+
+https://www.buymeacoffee.com/latteandcode
