c:1.14. Explain compare function

--- a/1. Objects & Arrays/14. Sorting arrays.md
+++ b/1. Objects & Arrays/14. Sorting arrays.md
@@ -20,6 +20,14 @@ If we need to sort numbers in ascending order:
 arr.sort((a, b) => (a - b)); // [1, 7, 10, 30, 60]
 ```
 
+We are passing a compare function to `sort`:
+
+- If returns a number less than 0, `a` goes before `b`.
+
+- If returns 0, `a` and `b` mantain their positions in the array.
+
+- If returns a number less than 0, `a` goes after `b`.
+
 Now we can order any list of values. For example:
 
 ```
