c:01.14 use localeCompare to sort strings

--- a/1. Objects & Arrays/14. Sorting arrays.md
+++ b/1. Objects & Arrays/14. Sorting arrays.md
@@ -26,7 +26,7 @@ We are passing a compare function to `sort`:
 
 - If returns 0, `a` and `b` mantain their positions in the array.
 
-- If returns a number less than 0, `a` goes after `b`.
+- If returns a number greater than 0, `a` goes after `b`.
 
 Now we can order any list of values. For example:
 
@@ -44,6 +44,16 @@ const products = [
 ];
 products.sort((p1, p2) => (p1.price - p2.price));
 ```
+
+## Comparing strings
+
+A good practice to compare strings is using the method `String.prototype.localeCompare`:
+
+```
+["a", "z", "ä"].sort((a, b) => a.localeCompare(b)); // [ 'a', 'ä', 'z' ]
+```
+
+Thanks to [Rafael Sánchez de la Paz](https://www.linkedin.com/feed/update/urn:li:activity:6724610735957123073?commentUrn=urn%3Ali%3Acomment%3A%28activity%3A6724610735957123073%2C6724974767432073216%29).
 
 ## ☕️ If you liked it, you can invite me for a coffee at:
 
