--- a/1. Objects & Arrays/14. Sorting arrays.md
+++ b/1. Objects & Arrays/14. Sorting arrays.md
@@ -47,7 +47,7 @@ products.sort((p1, p2) => (p1.price - p2.price));
 
 ## Comparing strings
 
-A good practice to compare strings is using the method `String.prototype.localeCompare`:
+A good practice to compare strings is using the method `String.prototype.c`:
 
 ```
 ["a", "z", "ä"].sort((a, b) => a.localeCompare(b)); // [ 'a', 'ä', 'z' ]
