Add a new multiple conditions code and remove spaces

--- a/6. Good to know/10. Multiple Conditions.md
+++ b/6. Good to know/10. Multiple Conditions.md
@@ -3,26 +3,33 @@
 Sometimes we have to check multiple conditions:
 
 ```js
-if (myVar === 'foo' || myVar === 'bar' || myVar === 'zeta') { 
+if (myVar === 'foo' || myVar === 'bar' || myVar === 'zeta') {
     // do something
-} 
+}
 ```
 
 🙂 There is a shorthand for doing this:
 
 ```js
-if (['foo', 'bar', 'zeta'].indexOf(myVar) >= 0) { 
-// do something 
+if (['foo', 'bar', 'zeta'].indexOf(myVar) >= 0) {
+// do something
 }
 ```
 
 😁 And even better:
 
 ```js
-if (['foo', 'bar', 'zeta'].includes(myVar)) { 
-  // do something 
+if (['foo', 'bar', 'zeta'].includes(myVar)) {
+  // do something
 }
 ```
+
+😜 A cool way:
+
+```js
+if (!!~['foo', 'bar', 'zeta'].indexOf(myVar)) {
+// do something
+}
 
 ## ☕️ If you liked it, you can invite me for a coffee at:
 
