--- a/8. Web Development/10. Copy Button.md
+++ b/8. Web Development/10. Copy Button.md
@@ -1,6 +1,15 @@
 # 📝 Creating a copy button
 
-## Copy the contents of an input
+## Using new Clipboard API
+
+```js
+navigator.clipboard.readText().then(
+  clipText => document.querySelector(".editor").innerText += clipText);
+```
+
+## Using exec command (not recommended)
+
+### Copy the contents of an input
 
 Having the following HTML:
 
@@ -19,11 +28,11 @@ We can implement a copy button:
 const copyInputButton = document.getElementById('copyInputButton');
 copyInputButton.addEventListener('click', function() {
   document.getElementById('input').select();
-  document.execCommand('copy');                 
+  document.execCommand('copy');
 });
 ```
 
-## Copy the contents of a div
+### Copy the contents of a div
 
 Having the following HTML:
 
@@ -50,7 +59,7 @@ copyDivButton.addEventListener('click', function() {
 });
 ```
 
-## CodePen
+### CodePen
 
 https://codepen.io/ger86/pen/NWrXpRv?editors=1111
 
