--- a/4. Special Objects/04. Intl Object.md
+++ b/4. Special Objects/04. Intl Object.md
@@ -2,7 +2,7 @@
 
 ## 1️⃣ Intl.DateTimeFormat
 
-```
+```js
 const now = new Date();
 console.log(new Intl.DateTimeFormat('en-US').format(date)); // "3/18/2020"
 console.log(new Intl.DateTimeFormat('es-ES').format(date)); // "18/3/2020"
@@ -10,24 +10,39 @@ console.log(new Intl.DateTimeFormat('es-ES').format(date)); // "18/3/2020"
 
 ## 2️⃣ Intl.RelativeTimeFormat
 
-```
+```js
 const relativeTimeFormatter = new Intl.RelativeTimeFormat('es', { style: 'narrow' });
 console.log(relativeTimeFormatter.format(3, 'minute')); // "dentro de 3 min"
 console.log(relativeTimeFormatter.format(-4, 'hour'));  // "hace 4 h"
 ```
 
-## 3️⃣ Intl.RelativeTimeFormat
+## 3️⃣ Intl.ListFormat
 
-```
+As a conjunction: 
+
+```js
 const fruits = ['🍎', '🍌', '🍐'];
 const listFormatter = new Intl.ListFormat('es', { style: 'long', type: 'conjunction' });
 console.log(listFormatter.format(fruits)); // "🍎, 🍌 y 🍐"
 ```
 
+As a disjunction: 
+
+```js
+const animals = ['🐶', '🐱', '🐰'];
+const listFormatter = new Intl.ListFormat('es', { style: 'long', type: 'disjunction' });
+console.log(listFormatter.format(animals)); // "🐶, 🐱 o 🐰"
+```
+
 ## 4️⃣ Intl.NumberFormat
 
-```
+```js
 const total = 123456.789;
 const numberFormatter = new Intl.NumberFormat('es-ES', { style: 'currency', currency: 'EUR' });
 console.log(numberFormatter.format(total)); // "123.456,79 €"
 ```
+
+
+## ☕️ If you liked it, you can invite me for a coffee at:
+
+https://www.buymeacoffee.com/latteandcode
