c: 01.15 fix extra space

--- a/1. Objects & Arrays/15. Delete key from object.md
+++ b/1. Objects & Arrays/15. Delete key from object.md
@@ -1,4 +1,4 @@
-# 🚽 Delete key from object
+# 🚽 Delete key from an object
 
 ## 🙁 Using `delete` keyword
 
@@ -28,7 +28,7 @@ const {age, ...developerWithoutAge} = developer;
 console.log(developerWithoutAge); // {name: "Gerardo", company: "Latte and Code"}
 ```
 
-💛  Pro Tip: Avoid mutating an object, better create a copy of it with its modified content
+💛 Pro Tip: Avoid mutating an object, better create a copy of it with its modified content
 
 ## ☕️ If you liked it, you can invite me for a coffee at:
 
