--- a/1. Objects & Arrays/16. Map, filter y reduce.md
+++ b/1. Objects & Arrays/16. Map, filter y reduce.md
@@ -57,3 +57,7 @@ Finally, we are going to combine them to make pizza:
 const pizza = cookedIngredients.reduce((pizzaInProgress, ingredient) => ([...pizzaInProgress, ingredient.name]), []);
 /** ["🫓", "🥫", "🥓", "🧀", "🧅", "🍄"] **/
 ```
+
+## ☕️ If you liked it, you can invite me for a coffee at:
+
+https://www.buymeacoffee.com/latteandcode
