--- a/6. Good to know/17. Get Image Orientation.md
+++ b/6. Good to know/17. Get Image Orientation.md
@@ -1,4 +1,4 @@
-# 🙃 Get image orientation 🙃
+# 🙃 Get image orientation with Javascript 🙃
 
 👉 Requires the following package https://github.com/exif-js/exif-js
 
