--- a/6. Good to know/17. Get Image Orientation.md
+++ b/6. Good to know/17. Get Image Orientation.md
@@ -6,8 +6,9 @@
 import EXIF from 'exif-js';
 
 export default function(blob) {
-  if (!blob) {
-    return new Promise(resolve => resolve(1));
+  // next 2 lines thanks to to https://www.linkedin.com/in/rolangonzalez/
+  if (!blob || !(blob instanceof Blob)) {
+    return new Promise((resolve, reject) => reject(new Error('No blob')));
   }
   return new Promise(resolve => {
     EXIF.getData(blob, function() {
