c: 01.17 index by using reduce

--- a/1. Objects & Arrays/17. Index By.md
+++ b/1. Objects & Arrays/17. Index By.md
@@ -44,3 +44,7 @@ const indexed = indexBy(people, 'id'));
 }
 **/
 ```
+
+## ☕️ If you liked it, you can invite me for a coffee at:
+
+https://www.buymeacoffee.com/latteandcode
