c: 01:18 Deep vs Shallow

--- a/1. Objects & Arrays/01. Clone.md
+++ b/1. Objects & Arrays/01. Clone.md
@@ -45,3 +45,7 @@ noahsArk.people.push('👶');
 console.log(noahsArk); // { animals:  ["🐱", "🦕"], people: ["👦", "👩", "👶"] }
 console.log(clonedNoahsArk); // { animals:  ["🐱", "🦕"], people: ["👦", "👩", "👶"] }
 ```
+
+## ☕️ If you liked it, you can invite me for a coffee at:
+
+https://www.buymeacoffee.com/latteandcode
