--- a/6. Good to know/19. Date-fns.md
+++ b/6. Good to know/19. Date-fns.md
@@ -27,3 +27,7 @@ const previousMonth = addMonths(parsedDate, -1);
 const result = isThisMonth(new Date())
 // ✅ true
 ```
+
+## ☕️ If you liked it, you can invite me for a coffee at:
+
+https://www.buymeacoffee.com/latteandcode
