fix: 08. Flat Map

--- a/1. Objects & Arrays/08. FlatMap.md
+++ b/1. Objects & Arrays/08. FlatMap.md
@@ -17,7 +17,7 @@ console.log(doneTasks);
 ## Now with flat map
 
 ```js
-const doneTasks = tasks.flatMap(task => [task, '✅']).flat();
+const doneTasks = tasks.flatMap(task => [task, '✅']);
 console.log(doneTasks);
 // ["🧺", "✅", "🏋️", "✅", "🧑🏼‍🍳", "✅"] 
 ```
