--- a/8. Web Development/13. Calling a function before leaving page.md
+++ b/8. Web Development/13. Calling a function before leaving page.md
@@ -21,3 +21,7 @@ window.addEventListener(
 ```
 
 ❗️❗️ Some browsers used to display the returned string in the confirmation dialog. However, this is deprecated and no longer supported.
+
+## ☕️ If you liked it, you can invite me for a coffee at:
+
+https://www.buymeacoffee.com/latteandcode
