--- a/1. Objects & Arrays/22. Object destructuring.md
+++ b/1. Objects & Arrays/22. Object destructuring.md
@@ -1,10 +1,14 @@
 # 👾 Object destructuring 👾
 
+
+Let's define a simple object:
+
 ```js
 const pet = { name: 'Simba', type: 'dog', nickname: '🦁', friend: {name: 'Gerardo'} };
+```
+## 1️⃣ Extract and renaming properties
 
-// 1️⃣ Extract and renaming properties
-
+```js
 const { name, nickname } = pet;
 
 const { type: kind } = pet;
@@ -12,16 +16,29 @@ console.log(kind); // 'dog'
 
 const { friend: { name: friendName }} = pet;
 console.log(friendName); // 'Gerardo'
+```
 
-// 2️⃣ Removing properties
+## 2️⃣ Removing properties
 
+```js
 const { type, friend, ...dog } = pet;
 console.log(dog); // { name: 'Simba', nickname: '🦁'};
+```
 
-// 3️⃣ Default properties
+## 3️⃣ Default properties
 
+```js
 const { age = 7 } = pet;
 console.log(age); // 7
+```
+
+## 4️⃣ In functions
+
+```js
+function printPet({name}) {
+  console.log(name);
+}
+printPet(pet);
 ```
 
 ## ☕️ If you liked it, you can invite me for a coffee at:
