08:17 Cancel fetch request with AbortController with can i use

--- a/8. Web Development/17. Cancel fetch request.md
+++ b/8. Web Development/17. Cancel fetch request.md
@@ -31,6 +31,10 @@ abortBtn.addEventListener("click", function () {
 });
 ```
 
+## Can I use AbortController?
+
+https://caniuse.com/?search=abortcontroller
+
 ## ☕️ If you liked it, you can invite me for a coffee at:
 
 https://www.buymeacoffee.com/latteandcode
