01:24 Symbols and objects

--- a/1. Objects & Arrays/23. Array at.md
+++ b/1. Objects & Arrays/23. Array at.md
@@ -12,3 +12,7 @@ const animals = ["🐶", "🐱", "🦁", "🦖"];
 const dog = animals.at(0);
 const lion = animals.at(-2);
 ```
+
+## ☕️ If you liked it, you can invite me for a coffee at:
+
+https://www.buymeacoffee.com/latteandcode
