--- a/8. Web Development/18. Broadcast Channel.md
+++ b/8. Web Development/18. Broadcast Channel.md
@@ -1,4 +1,4 @@
-# 📨 Cancel fetch request with AbortController
+# 📨 BroadcastChannel
 
 ```js
 const broadcastChannel = new BroadcastChannel("latteandcode_channel");
