--- a/8. Web Development/21. Dialog element.md
+++ b/8. Web Development/21. Dialog element.md
@@ -20,3 +20,7 @@
   dialog.addEventListener("close", () => console.log("closed"));
 </script>
 ```
+
+## ☕️ If you liked it, you can invite me for a coffee at:
+
+https://www.buymeacoffee.com/latteandcode
