08:22 Listener on local storage (2)

--- a/8. Web Development/22. Listener on Local Storage.md
+++ b/8. Web Development/22. Listener on Local Storage.md
@@ -11,3 +11,7 @@ window.addEventListener('storage', function(event) {
 - 💡 It's a way for other pages on the domain using the storage to sync any changes that are made
 
 - 👨🏼‍💻 use case: login/logout user from all tabs at the same time
+
+## ☕️ If you liked it, you can invite me for a coffee at:
+
+https://www.buymeacoffee.com/latteandcode
