--- a/1. Objects & Arrays/01. Clone.md
+++ b/1. Objects & Arrays/01. Clone.md
@@ -1,7 +1,7 @@
-# 👨‍👩‍👧‍👦 3 ways to clone objects in Javascript
+# 👨‍👩‍👧‍👦 4 ways to clone objects in Javascript
 
 ```js
-const noahsArk = { cat: '🐱', dino: '🦕', lion: '🦁', dog: '🐶' }
+const noahsArk = { cat: "🐱", dino: "🦕", lion: "🦁", dog: "🐶" };
 ```
 
 ## 1️⃣ Spread operator
@@ -16,34 +16,59 @@ const clonedNoahsArk = { ...noahsArk };
 const anotherNoashArk = Object.assign({}, noahsArk);
 ```
 
+## ❗️ Be careful with shallow cloning
+
+```js
+const noahsArk = {
+  animals: ["🐱", "🦕"],
+  people: ["👦", "👩"],
+};
+
+const clonedNoahsArk = { ...noahsArk };
+noahsArk.people.push("👶");
+
+console.log(noahsArk); // { animals:  ["🐱", "🦕"], people: ["👦", "👩", "👶"] }
+console.log(clonedNoahsArk); // { animals:  ["🐱", "🦕"], people: ["👦", "👩", "👶"] }
+```
+
 ## 3️⃣ JSON
 
 ```js
 const justAnotherArk = JSON.parse(JSON.stringify(noahsArk));
 ```
 
+## 4️⃣ Structured clone
+
+The global `structuredClone()` method creates a deep clone of a given value using the structured clone algorithm. It solves the problems with shallow cloning.
+
+```js
+const dinosaur = {
+  name: "T-Rex",
+  address: {
+    town: "Jurassic Park",
+    island: "Nublar island",
+  },
+};
+
+const clonedDinosaur = structuredClone(dinosaur);
+
+dinosaur === clonedDinosaur; // false;
+
+clonedDinosaur.address.town = "Jurassic World";
+
+console.log(dinosaur.address.town); // 'Jurassic Park'
+console.log(clonedDinosaur.address.town); // 'Jurassic World'
+```
+
+Structured cloning can handle cyclical data structures, support many built-in data types and is generally more robust and often faster.
+
 ## ❌ Assignment is not cloning
 
 ```js
 const failedClone = noahsArk;
-noahsArk.dino = '🦖';
+noahsArk.dino = "🦖";
 console.log(noahsArk); // { cat: "🐱", dino: "🦖", lion: "🦁", dog: "🐶"}
 console.log(failedClone); // {cat: "🐱", dino: "🦖", lion: "🦁", dog: "🐶"}
-```
-
-## 🤔 Be careful with shallow cloning
-
-```js
-const noahsArk = { 
-  animals: ['🐱', '🦕'],
-  people: ['👦', '👩']
-};
-
-const clonedNoahsArk = { ...noahsArk };
-noahsArk.people.push('👶');
-
-console.log(noahsArk); // { animals:  ["🐱", "🦕"], people: ["👦", "👩", "👶"] }
-console.log(clonedNoahsArk); // { animals:  ["🐱", "🦕"], people: ["👦", "👩", "👶"] }
 ```
 
 ## ☕️ If you liked it, you can invite me for a coffee at:
