01:27 Listener on local storage (1)

--- a/1. Objects & Arrays/27. For in Loop.md
+++ b/1. Objects & Arrays/27. For in Loop.md
@@ -10,7 +10,7 @@ const pet = {
 };
 
 for (let arrKey in animals) {
-  console.log(arrKey); // 0, 1, 2
+  console.log(arrKey); // '0', '1', '2'
 }
 
 for (let objKey in pet) {
