--- a/1. Objects & Arrays/28. toSorted.md
+++ b/1. Objects & Arrays/28. toSorted.md
@@ -22,6 +22,16 @@ console.log(secondSorted); // ['a', 'b', 'c']
 console.log(second === secondSorted); // false
 ```
 
+## Polyfill of `toSorted`
+
+```js
+if (!Array.prototype.toSorted) {
+  Array.prototype.toSorted = function (compareFn) {
+    return this.slice().sort(compareFn);
+  };
+}
+```
+
 ## ☕️ If you liked it, you can invite me for a coffee at:
 
 https://www.buymeacoffee.com/latteandcode
