--- a/8. Web Development/24. VisibilityChange.md
+++ b/8. Web Development/24. VisibilityChange.md
@@ -2,6 +2,8 @@
 
 The "visibilitychange" event is fired when a state change occurs in the tab's visibility.
 
+This change can be due to one of the following events: user navigates to a new page, switches tabs, closes the tab, minimizes or closes the browser, or, on mobile, switches from the browser to a different app.
+
 🥷🏼 Use case: display information when the user returns to the page or send information when the user leaves the tab.
 
 ## Example
