--- a/1. Objects & Arrays/06. Find, some, every.md
+++ b/1. Objects & Arrays/06. Find, some, every.md
@@ -6,13 +6,13 @@ Check if there is an element within an array that meets a certain condition.
 
 ```js
 const players = [
-  { id: 1, name: 'Player one', goalkeeper: false},
-  { id: 2, name: 'Player two', goalkeeper: true},
-  { id: 3, name: 'Player three', goalkeeper: false}, 
-  { id: 4, name: 'Player four', goalkeeper: false}
+  { id: 1, name: "Player one", goalkeeper: false },
+  { id: 2, name: "Player two", goalkeeper: true },
+  { id: 3, name: "Player three", goalkeeper: false },
+  { id: 4, name: "Player four", goalkeeper: false },
 ];
 
-const hasAGoalkeeper = players.some(player => player.goalkeeper);
+const hasAGoalkeeper = players.some((player) => player.goalkeeper);
 console.log(hasAGoalkeeper); // true
 ```
 
@@ -22,13 +22,13 @@ Check if all the elements meet a certain condition within an array.
 
 ```js
 const people = [
-  { id: 1, name: 'One', age: 21},
-  { id: 2, name: 'Two', age: 19},
-  { id: 3, name: 'Three', age: 40}, 
-  { id: 4, name: 'Four', age: 42}
+  { id: 1, name: "One", age: 21 },
+  { id: 2, name: "Two", age: 19 },
+  { id: 3, name: "Three", age: 40 },
+  { id: 4, name: "Four", age: 42 },
 ];
 
-const areAllAdults = people.every(person => person.age >= 18);
+const areAllAdults = people.every((person) => person.age >= 18);
 console.log(areAllAdults); // true
 ```
 
@@ -38,15 +38,15 @@ Returns the first value that meets a certain condition or undefined if there is 
 
 ```js
 const people = [
-  { id: 1, name: 'One', age: 12 },
-  { id: 2, name: 'Two', age: 19 },
-  { id: 3, name: 'Three', age: 40 }, 
-  { id: 4, name: 'Four', age: 42 }
+  { id: 1, name: "One", age: 12 },
+  { id: 2, name: "Two", age: 19 },
+  { id: 3, name: "Three", age: 40 },
+  { id: 4, name: "Four", age: 42 },
 ];
 
-const firstAdult = people.find(person => person.age >= 18);
+const firstAdult = people.find((person) => person.age >= 18);
 console.log(firstAdult); // { id: 2, name: 'Two', age: 19}
 
-const personWithNineteen = people.find(person => person.age === 19);
+const personWithNineteen = people.find((person) => person.age === 19);
 console.log(personWithNineteen); // { id: 2, name: 'Two', age: 19 }
 ```
