33. Replace switch with object (2)

--- a/1. Objects & Arrays/33. Replace switch with object.md
+++ b/1. Objects & Arrays/33. Replace switch with object.md
@@ -1,5 +1,7 @@
 # Replace switch with object
 
+This is a shortcut to replace the switch with objects. The idea is to make each instance a property of the object and directly access the value through the object.
+
 ```js
 const animal = "dog";
 
@@ -21,6 +23,12 @@ const logAnimal = {
 logAnimal[animal]();
 // 'Si si si, simba! 🎺'
 ```
+
+🚀 As you can see, we have gained a lot in readability, although right now "switch" prevails in performance. In the latest versions of Chrome, this operator wins when we face situations with many cases.
+
+https://jsben.ch/JYZLQ
+
+⚖️ As always, it's about finding the balance between readability and performance. For small "switches", use the shape that you like best. For tricky cases, heal yourself using switch (although the syntax is worse).
 
 ## ☕️ If you liked it, you can invite me for a coffee at:
 
