--- a/8. Web Development/25. Web Share API.md
+++ b/8. Web Development/25. Web Share API.md
@@ -17,3 +17,11 @@ function async shareSomething() {
 
 button.addEventListener("click", () => shareSomething(shareData));
 ```
+
+## Can I use?
+
+https://caniuse.com/?search=navigator.share
+
+## ☕️ If you liked it, you can invite me for a coffee at:
+
+https://www.buymeacoffee.com/latteandcode
