add more content about symbols

--- a/1. Objects & Arrays/24. Objects and Symbols.md
+++ b/1. Objects & Arrays/24. Objects and Symbols.md
@@ -24,6 +24,38 @@ Object.getOwnPropertyNames(pet); // ['name']
 Object.getOwnPropertySymbols(pet); // [Symbol()]
 ```
 
+## `Symbol.for`
+
+The Symbol.for() static method searches for existing symbols in a runtime-wide symbol registry with the given key and returns it if found. Otherwise a new symbol gets created in the global symbol registry with this key.
+
+```js
+const someObject = {};
+
+const symbolA = Symbol('symbolA');
+const symbolB = Symbol.for('symbolB');
+
+console.log(symbolA.description); // "symbolA"
+
+someObject[symbolA] = 'a';
+someObject[symbolB] = 'b';
+someObject['c'] = 'c';
+someObject.d = 'd';
+
+console.log(someObject[symbolA]); // "a"
+console.log(someObject[symbolB]); // "b"
+
+// The key cannot be accessed with any other symbols or without a symbol.
+console.log(someObject[Symbol('symbolA')]); // undefined
+console.log(someObject['a']); // undefined
+
+console.log(someObject[Symbol.for('symbolB')]); // "b"
+
+// The keys are not enumerated when using for ... in.
+for (const i in someObject) {
+  console.log(i); // "c", "d"
+}
+```
+
 ## ☕️ If you liked it, you can invite me for a coffee at:
 
 https://www.buymeacoffee.com/latteandcode
