--- a/6. Good to know/07. Tagged Templates.md
+++ b/6. Good to know/07. Tagged Templates.md
@@ -34,6 +34,29 @@ operate`2 ${multiplyBy} 10`; // 20
 operate`2 ${dividedBy} 10`; // 0.2
 ```
 
+## More examples
+
+```js
+// 🪄 Format a number with two decimal places
+function formatNumber(strings, number) {
+  return strings[0] + number.toFixed(2) + strings[1];
+}
+console.log(formatNumber`The value is: ${2.5}.`); 
+// The value is: 2.50.
+```
+
+```js
+// 🐣 Change words to lowercase using a tagged template
+function toLowerCase(strings, ...words) {
+  return strings.reduce(
+    (acc, part, i) => acc + part + (words[i] ?? '').toLowerCase(), 
+    ''
+  );
+}
+console.log(toLowerCase`Hello, ${'WORLD'}! By ${'LATTE AND CODE'}`); 
+// Hello, world! By latte and code
+```
+
 ## To read more
 
 - [Javascript: How Backticks Work](https://medium.com/better-programming/javascript-how-backticks-work-de269e0fb8ba)
